--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-home",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -21,6 +21,5 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
-  },
-  "type": "module"
+  }
 }
